Fix add funds button mobile responsiveness

--- a/webapp/src/assets/styles/index.css
+++ b/webapp/src/assets/styles/index.css
@@ -11,6 +11,10 @@
   padding-left: 15px;
 }
 
+.nowrap {
+  white-space: nowrap;
+}
+
 .otp-field:hover {
   border: 1px solid #8f8f8f;
 }
